refactor(nonemptylist): modern Java idioms — SequencedCollection accessors + fluent assertions (#549)
Idiom audit against the HKJ style rules (immutability / type safety / correctness /
modern Java 25 functional style):

- Use SequencedCollection accessors getFirst()/getLast() instead of get(0)/get(size-1)
  in NonEmptyList.fromList/last/reverse, the deserializer, and the test arbitrary.
- Assert NonEmptyList transform results via the fluent assertThatNonEmptyList(...)
  helper (containsExactly/hasHead) instead of narrow-to-List-then-raw-assert.

No behaviour change; 100% line/branch on the nonemptylist classes preserved. The
type was already idiomatic on immutability (record + List.copyOf + unmodifiable
tail()), type safety (direct-Kind HKT), and correctness (total accessors,
Validation framework, fromX -> Maybe, no Monoid/MonadZero).